--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <div class="row">
+<!--testwanglei github123-->
 	<div class="col-md-12">
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   		<!-- Indicators -->
