--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="navbar-brand logo" href="http://www.yitongbaijiu.com/index.php"></a>
+            <a class="navbar-brand logo" href="  "></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-left">
@@ -43,13 +43,13 @@
             <ul class="nav navbar-nav navbar-right" id="ECS_MEMBERZONE">
                 <li>
                     
-<a href="http://www.yitongbaijiu.com/user.php" rel="nofollow">登录</a>|<a href="http://www.yitongbaijiu.com/user.php?act=register" rel="nofollow">注册</a>
+<!--<a href="http://www.yitongbaijiu.com/user.php" rel="nofollow">登录</a>|<a href="http://www.yitongbaijiu.com/user.php?act=register" rel="nofollow">注册</a>-->
 
-| 
-<a id="ECS_CARTINFO" href="http://www.yitongbaijiu.com/flow.php" title="查看购物车">
-    <span class="glyphicon glyphicon-shopping-cart"></span>
-    查看购物车<span class="badge">0</span>
-</a>
+<!--| -->
+<!--<a id="ECS_CARTINFO" href="http://www.yitongbaijiu.com/flow.php" title="查看购物车">-->
+    <!--<span class="glyphicon glyphicon-shopping-cart"></span>-->
+    <!--查看购物车<span class="badge">0</span>-->
+<!--</a>-->
                 </li>
             </ul>
         </div>
