--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -4,17 +4,17 @@
 		  	<ol class="breadcrumb">
 			  <span>您现在所在的位置：</span>
 			  <li><%= link_to "首页", root_path %></li>
-			  <li>公司介绍</li>
+			  <li>关于我们</li>
 			</ol>
 		</div>
 	</div>
 </div>
 <div class="row">
-	<%= render "products/product_sider" %>
+	<!--<%#= render "products/product_sider" %>-->
 	<div class="col-md-8">
 		<div class="panel panel-primary">
 		  <div class="panel-heading">
-			  <h3 class="panel-title">公司介绍</h3>
+			  <h3 class="panel-title">关于我们</h3>
 		  </div>
 		  <div class="panel-body">
 		  	<div class="row">
