--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,14 +5,14 @@
 			  <span>您现在所在的位置：</span>
 			  <li><%= link_to "首页", root_path %></li>
 			  <li><%= link_to "产品列表", products_path %></li>
-			  <li><%= @product.name %></li>
+			  <!--<li><%#= @product.name %></li>-->
 			</ol>
 		</div>
 	</div>
 </div>
 <div class="row">
-	<%= render "product_sider" %>
-	<div class="col-md-8">
+	<!--<%#= render "product_sider" %>-->
+	<div class="col-md-14">
 		<div class="panel panel-primary">
 		  <div class="panel-heading">
 			  <h3 class="panel-title"><%= @product.name %></h3>
