--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,33 +1,32 @@
-<div class="row">
-	<div class="col-md-12">
-		<div class="shared-breadcrumb">
-		  	<ol class="breadcrumb">
-			  <span>您现在所在的位置：</span>
-			  <li><%= link_to "首页", root_path %></li>
-			  <li><%= link_to "产品列表", products_path %></li>
-			  <!--<li><%#= @product.name %></li>-->
-			</ol>
-		</div>
-	</div>
-</div>
-<div class="row">
-	<!--<%#= render "product_sider" %>-->
-	<div class="col-md-14">
-		<div class="panel panel-primary">
-		  <div class="panel-heading">
-			  <h3 class="panel-title"><%= @product.name %></h3>
-		  </div>
-		  <div class="panel-body">
-			<p class="text-center">
-				<%= image_tag @product.pic_url ||  "default.jpg", size: "300x180" %>
-			</p>
-			<hr>
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 product-content">
-					<%= sanitize @product.content %>
-				</div>
-			</div>
-		  </div>
-	  	</div>
-	</div>
-</div>
+        <div class="container">
+           <div class="panel panel-default">
+                <div class="panel-body">
+            <div class="row"> 
+                <div class="col-xs-7 col-md-7">
+					<div class="gallery">
+					    <div class="gallery-inner">
+					    	<%= image_tag @product.pic_url, class: "img-responsive center-block", alt: @product.name %>
+					    </div>
+					</div>
+                    
+                </div>
+                <div class="col-xs-5 col-md-5 goods-info">
+                    <ul class="list-unstyled">
+                        <li><h4><strong style="line-height:1.8"><%= @product.name %></strong></h4></li>
+                        <li><strong><h4 class="text-danger">￥79.00</h4></strong></li>
+                        <li><label>更新时间: <%= @product.updated_at.strftime("%F %T") %></label></li>
+                    </ul>
+                </div>
+            </div>
+                </div>
+            </div>
+
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>商品描述</h4>
+                </div>
+                <div class="panel-body">
+                	<%= sanitize @product.content %>
+                </div>
+            </div>
+        </div>
