--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,7 +14,7 @@
                     <ul class="list-unstyled">
                         <li><h4><strong style="line-height:1.8"><%= @product.name %></strong></h4></li>
                         <li><strong><h4 class="text-danger">￥79.00</h4></strong></li>
-                        <li><label>更新时间: <%= @product.updated_at.strftime("%F %T") %></label></li>
+                        <li><label>上架时间: <%= @product.updated_at.strftime("%F %T") %></label></li>
                     </ul>
                 </div>
             </div>
