--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,15 @@
  *
  *= require_self
  */
-@import "bootstrap-sprockets";
-@import "bootstrap";
+ @import "bootstrap.min";
 @import "bootstrap-theme.min";
 @import "style";
+ .head-wrap .navbar {
+    border-radius: 0px;
+  }
+
+
+body {
+    background-color: #ffffff;
+    padding-top: 51px;
+}
