--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -11,7 +11,8 @@
     </div>
     <div class="form-group">
       <label for="profile">产品详情</label>
-    <%= f.text_area :content, class: "form-control", placeholder: "产品详情", id: "editor" %>
+      <!-- <div id="editor"></div> -->
+    <%= f.text_area :content, placeholder: "产品详情", id: "editor" %>
     </div>
     <div class="form-group">
       <label for="pic">产品图片</label>
@@ -21,8 +22,11 @@
   <%= f.button "提交", class: "btn btn-success", data: { disable_with: "#{fa_icon("spinner spin", text: "提交...")}" } %>
   <%= link_to "取消", admin_products_path, class: "btn btn-primary" %>
 <% end %>
+
   <script>
-  var editor = new Simditor({
-    textarea: $('#editor')
+  $(function(){
+    var editor = new UE.ui.Editor();
+    editor.render("editor");
+    // $("#editor").hide();
   });
   </script>
