--- a/app/views/admin/contacts/_form.html.erb
+++ b/app/views/admin/contacts/_form.html.erb
@@ -5,12 +5,16 @@
   <%= render partial: "shared/error_messages", locals: {obj: @contact} %>
     <div class="form-group">
       <label for="profile">填写联系方式</label>
-    <%= f.text_area :content, class: "form-control", placeholder: "联系方式", id: "editor" %>
+    <%= f.text_area :content, placeholder: "联系方式", id: "editor" %>
     </div>
   <%= f.button "提交", class: "btn btn-success", data: { disable_with: "#{fa_icon("spinner spin", text: "提交...")}" } %>
 <% end %>
+
+
   <script>
-  var editor = new Simditor({
-    textarea: $('#editor')
+  $(function(){
+    var editor = new UE.ui.Editor();
+    editor.render("editor");
+    // $("#editor").hide();
   });
   </script>
