add-products-columns

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,9 +12,14 @@
                 </div>
                 <div class="col-xs-5 col-md-5 goods-info">
                     <ul class="list-unstyled">
-                        <li><h4><strong style="line-height:1.8"><%= @product.name %></strong></h4></li>
-                        <li><strong><h4 class="text-danger">￥79.00</h4></strong></li>
-                        <li><label>上架时间: <%= @product.updated_at.strftime("%F %T") %></label></li>
+                        <li><h2><%= @product.name %></h2></li>
+                    </ul>
+                    <ul>
+                        <li>Cras justo odio</li>
+                        <li>Dapibus ac facilisis in</li>
+                        <li>Morbi leo risus</li>
+                        <li>Porta ac consectetur ac</li>
+                        <li>Vestibulum at eros</li>
                     </ul>
                 </div>
             </div>
