--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,23 +1,57 @@
 
 <%= form_for([:admin, @product]) do |f| %>
   <%= render partial: "shared/error_messages", locals: {obj: @product} %>
-    <div class="form-group">
-      <label for="name">产品名称</label>
-      <%= f.text_field :name, class: "form-control", placeholder: "产品名称" %>
+      <div class="form-group">
+        <label for="name">产品名称</label>
+        <%= f.text_field :name, class: "form-control", placeholder: "产品名称" %>
+      </div>
+      <div class="form-group">
+        <label for="factory">酒厂</label>
+        <%= f.text_field :factory, class: "form-control", placeholder: "酒厂" %>
+      </div>
+      <div class="form-group">
+        <label for="origin">产地</label>
+        <%= f.text_field :origin, class: "form-control", placeholder: "产地" %>
+      </div>
+    <div class="form-inline">
+      <div class="form-group">
+        <label for="price">产品价格</label>
+        <%= f.text_field :price, class: "form-control", placeholder: "产品价格" %>
+      </div>
+      <div class="form-group">
+        <label for="weight">净含量</label>
+        <%= f.text_field :weight, class: "form-control", placeholder: "净含量" %>
+      </div>
+      <div class="form-group">
+        <label for="alco_level">酒精度</label>
+        <%= f.text_field :alco_level, class: "form-control", placeholder: "酒精度" %>
+      </div>
+      <div class="form-group">
+        <label for="standard">规格</label>
+        <%= f.text_field :standard, class: "form-control", placeholder: "规格" %>
+      </div>
+      <div class="form-group">
+        <label for="box">箱规</label>
+        <%= f.text_field :box, class: "form-control", placeholder: "箱规" %>
+      </div>
+      <div class="form-group">
+        <label for="flavor">香型</label>
+        <%= f.text_field :flavor, class: "form-control", placeholder: "香型" %>
+      </div>
     </div>
+      <div class="form-group">
+        <label for="material">原料</label>
+        <%= f.text_field :material, class: "form-control", placeholder: "原料" %>
+      </div>
     <div class="form-group">
-      <label for="name">产品价格</label>
-      <%= f.text_field :price, class: "form-control", placeholder: "产品价格" %>
+      <label for="pic">产品图片</label>
+      <%= f.file_field :pic, class: "form-control" %>
+      <%= image_tag(@product.pic_url, class: "img-thumbnail", size: "300x300") if @product.pic? %>
     </div>
     <div class="form-group">
       <label for="profile">产品详情</label>
       <!-- <div id="editor"></div> -->
     <%= f.text_area :content, placeholder: "产品详情", id: "editor" %>
-    </div>
-    <div class="form-group">
-      <label for="pic">产品图片</label>
-      <%= f.file_field :pic, class: "form-control" %>
-      <%= image_tag(@product.pic_url, class: "img-thumbnail") if @product.pic? %>
     </div>
   <%= f.button "提交", class: "btn btn-success", data: { disable_with: "#{fa_icon("spinner spin", text: "提交...")}" } %>
   <%= link_to "取消", admin_products_path, class: "btn btn-primary" %>
