--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -144,11 +144,16 @@ i.pm{background: #777;}
 /* GOODS
  * ------------------------- */
 .goods-info ul li {
-    padding: 30px 10px;
+    padding: 10px 10px;
+    border-bottom: none;
+}
+.goods-info ul li:first-child {
+    padding: 5px 10px;
     border-bottom: 1px solid #ddd;
 }
 .goods-info ul li:last-child {
-    border-bottom: none;
+    padding: 30px 10px;
+    border-bottom: 1px solid #ddd;
 }
 .goods-info ul li .btn-spin {
     width: 125px;
