--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
             <ul class="nav navbar-nav navbar-left">
                 <li class="<%= 'active' if controller_name=="welcome"%>"><%= link_to "首页", root_path %></li>
                 <li class="<%= 'active' if controller_name=="products"%>"><%= link_to "在线商城", spread_products_path %></li>
-                <li><a href="#">私人定制</a></li>
+                <li class="<%= 'active' if controller_name=="customes"%>"><%= link_to "私人定制", customes_path %></li>
                 <li class="<%= 'active' if controller_name =="companies"%>"><%= link_to "关于我们", intro_path%></a></li>
                 <li class="<%= 'active' if controller_name =="contacts"%>"><%= link_to "联系我们", root_path %></a></li>
               <!--<li><a href="#">联系我们</a></li>-->
